{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 264,
  "lineage": "430526c4-d4e4-7ff8-6113-a0d6615970b9",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:security-group/sg-0c6db30a28e0cfcf2",
            "description": "Cluster communication with Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6db30a28e0cfcf2",
            "ingress": [],
            "name": "mpargo-eks1-cluster-sg",
            "name_prefix": "",
            "owner_id": "126207143037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mpargo-eks1-cluster-sg",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo": "owned"
            },
            "tags_all": {
              "Name": "mpargo-eks1-cluster-sg",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:security-group/sg-050593fafc381618c",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workers egress access to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050593fafc381618c",
            "ingress": [],
            "name": "mpargo-eks1-workers-sg",
            "name_prefix": "",
            "owner_id": "126207143037",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mpargo-eks1-workers-sg",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo": "owned"
            },
            "tags_all": {
              "Name": "mpargo-eks1-workers-sg",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the Cluster API Server",
            "from_port": 443,
            "id": "sgrule-372067930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6db30a28e0cfcf2",
            "security_group_rule_id": "sgr-050b3c6a2b5fe8697",
            "self": false,
            "source_security_group_id": "sg-050593fafc381618c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to send communication to cluster primary security group",
            "from_port": 0,
            "id": "sgrule-2355641585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c6db30a28e0cfcf2",
            "security_group_rule_id": "sgr-012411a0d07b03a13",
            "self": false,
            "source_security_group_id": "sg-050593fafc381618c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2452544746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050593fafc381618c",
            "security_group_rule_id": "sgr-0ac0c7bbdd211440c",
            "self": false,
            "source_security_group_id": "sg-0c6db30a28e0cfcf2",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1600372781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050593fafc381618c",
            "security_group_rule_id": "sgr-041862b6dd30d8849",
            "self": false,
            "source_security_group_id": "sg-0c6db30a28e0cfcf2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers Kubelets to receive communication from the cluster control plane.",
            "from_port": 10250,
            "id": "sgrule-1863640232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050593fafc381618c",
            "security_group_rule_id": "sgr-00dee5aaab02b62d2",
            "self": false,
            "source_security_group_id": "sg-0c6db30a28e0cfcf2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to receive communication from cluster primary security group",
            "from_port": 0,
            "id": "sgrule-3677219341",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-050593fafc381618c",
            "security_group_rule_id": "sgr-06fd1a4f4b2f8042f",
            "self": false,
            "source_security_group_id": "sg-0c6db30a28e0cfcf2",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2667421417",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-050593fafc381618c",
            "security_group_rule_id": "sgr-06941ce5989c1412a",
            "self": false,
            "source_security_group_id": "sg-050593fafc381618c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-0340ef30ad03da935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "available_ip_address_count": 16379,
            "cidr_block": "10.140.0.0/18",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:AZ",
                "values": [
                  "ap-southeast-2a"
                ]
              },
              {
                "name": "tag:Project",
                "values": [
                  "mpargo-eks1"
                ]
              },
              {
                "name": "tag:Tier",
                "values": [
                  "Private"
                ]
              }
            ],
            "id": "subnet-0340ef30ad03da935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-private-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-041dd2ea804a3fc8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 16379,
            "cidr_block": "10.140.64.0/18",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:AZ",
                "values": [
                  "ap-southeast-2b"
                ]
              },
              {
                "name": "tag:Project",
                "values": [
                  "mpargo-eks1"
                ]
              },
              {
                "name": "tag:Tier",
                "values": [
                  "Private"
                ]
              }
            ],
            "id": "subnet-041dd2ea804a3fc8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-private-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-054a4f089410a166d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.140.128.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:AZ",
                "values": [
                  "ap-southeast-2a"
                ]
              },
              {
                "name": "tag:Project",
                "values": [
                  "mpargo-eks1"
                ]
              },
              {
                "name": "tag:Tier",
                "values": [
                  "Public"
                ]
              }
            ],
            "id": "subnet-054a4f089410a166d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-public-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-0e1fc4a42cb7d7d61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.140.129.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:AZ",
                "values": [
                  "ap-southeast-2b"
                ]
              },
              {
                "name": "tag:Project",
                "values": [
                  "mpargo-eks1"
                ]
              },
              {
                "name": "tag:Tier",
                "values": [
                  "Public"
                ]
              }
            ],
            "id": "subnet-0e1fc4a42cb7d7d61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-public-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d200d5d50ec3e797",
            "domain": "vpc",
            "id": "eipalloc-0d200d5d50ec3e797",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-79-218-4.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.218.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mpargo-eks1-eip",
              "Project": "mpargo-eks1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-eip",
              "Project": "mpargo-eks1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:internet-gateway/igw-0ad2e27f7cc012acc",
            "id": "igw-0ad2e27f7cc012acc",
            "owner_id": "126207143037",
            "tags": {
              "Name": "mpargo-eks1-igw",
              "Project": "mpargo-eks1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-igw",
              "Project": "mpargo-eks1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d200d5d50ec3e797",
            "association_id": "eipassoc-0e26951290265ae91",
            "connectivity_type": "public",
            "id": "nat-00debebef66b66217",
            "network_interface_id": "eni-0aa11fbab3a96faec",
            "private_ip": "10.140.128.140",
            "public_ip": "54.79.218.4",
            "subnet_id": "subnet-054a4f089410a166d",
            "tags": {
              "Name": "mpargo-eks1-nat",
              "Project": "mpargo-eks1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-nat",
              "Project": "mpargo-eks1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_igw_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ad2e27f7cc012acc",
            "id": "r-rtb-0e81f6f393b14730c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e81f6f393b14730c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_nat_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b42cba9a796cd6e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00debebef66b66217",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b42cba9a796cd6e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:route-table/rtb-0b42cba9a796cd6e2",
            "id": "rtb-0b42cba9a796cd6e2",
            "owner_id": "126207143037",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mpargo-eks1-private-rt",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-private-rt",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:route-table/rtb-0e81f6f393b14730c",
            "id": "rtb-0e81f6f393b14730c",
            "owner_id": "126207143037",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mpargo-eks1-public-rt",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-public-rt",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ae497548f5273ad",
            "route_table_id": "rtb-0b42cba9a796cd6e2",
            "subnet_id": "subnet-0340ef30ad03da935"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4658ca6a1013ac5",
            "route_table_id": "rtb-0b42cba9a796cd6e2",
            "subnet_id": "subnet-041dd2ea804a3fc8a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f054ed878fc1d7fa",
            "route_table_id": "rtb-0e81f6f393b14730c",
            "subnet_id": "subnet-054a4f089410a166d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b16f52ebd8e2d428",
            "route_table_id": "rtb-0e81f6f393b14730c",
            "subnet_id": "subnet-0e1fc4a42cb7d7d61"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-0340ef30ad03da935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.140.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0340ef30ad03da935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-private-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-private-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-041dd2ea804a3fc8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.140.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041dd2ea804a3fc8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-private-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-private-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Private",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-054a4f089410a166d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.140.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054a4f089410a166d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-public-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "ap-southeast-2a",
              "Name": "mpargo-eks1-public-subnet-1",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:subnet/subnet-0e1fc4a42cb7d7d61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.140.129.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1fc4a42cb7d7d61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126207143037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-public-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "ap-southeast-2b",
              "Name": "mpargo-eks1-public-subnet-2",
              "Project": "mpargo-eks1",
              "Tier": "Public",
              "kubernetes.io/cluster/mpargo-eks1": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:vpc/vpc-0593cbf8a14b23516",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.140.0.0/16",
            "default_network_acl_id": "acl-0acf5a2757b060bce",
            "default_route_table_id": "rtb-0c88e366f0c8a3b44",
            "default_security_group_id": "sg-02d6c9cbbdf9c5c4a",
            "dhcp_options_id": "dopt-0b574651b990eaa4f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0593cbf8a14b23516",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c88e366f0c8a3b44",
            "owner_id": "126207143037",
            "tags": {
              "Name": "mpargo-eks1-vpc",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared"
            },
            "tags_all": {
              "Name": "mpargo-eks1-vpc",
              "Project": "mpargo-eks1",
              "kubernetes.io/cluster/mpargo-eks1": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_endpoint_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126207143037:vpc-endpoint/vpce-0b8184f56eb0ff073",
            "cidr_blocks": [
              "3.5.164.0/22",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-0b8184f56eb0ff073",
            "owner_id": "126207143037",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b42cba9a796cd6e2",
              "rtb-0e81f6f393b14730c"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "mpargo-eks1-vpc-endpoint-s3",
              "Project": "mpargo-eks1"
            },
            "tags_all": {
              "Name": "mpargo-eks1-vpc-endpoint-s3",
              "Project": "mpargo-eks1"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0593cbf8a14b23516"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route.eks_igw_gtw",
            "module.vpc.aws_route.eks_nat_gtw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.private_association",
            "module.vpc.aws_route_table_association.public_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_subnet.private_subnet_a",
            "module.vpc.data.aws_subnet.private_subnet_b",
            "module.vpc.data.aws_subnet.public_subnet_a",
            "module.vpc.data.aws_subnet.public_subnet_b"
          ]
        }
      ]
    }
  ]
}